# face_detector

./: .gitignore  README.md  face_detector.py  face_detector_app.py  main.py  pyproject.toml  test_face_detector.py
.gradio/cached_examples/31/: log.csv
.gradio/cached_examples/39/: log.csv
