[project]
name = "face-detector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepface>=0.0.93",
    "facenet-pytorch>=2.5.3",
    "gradio>=5.27.0",
    "loguru>=0.7.3",
    "numpy>=2.1.3",
    "opencv-python>=4.11.0.86",
    "ruff>=0.11.7",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "typing-extensions>=4.13.2",
]
